--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ html {
 body {
     min-height: 100vh;
     background-image: linear-gradient(150deg, #830AD6, #E72DE1);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container {
